# han-agents

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test_from_github.yml
src/han_agents/: __init__.py  agents.py  registry.py
src/han_agents/han2026/: __init__.py
src/han_agents/han2026/team_21049/: __init__.py
src/han_agents/han2026/team_21058/: __init__.py  first_agent.py  mi_agent.py
src/han_agents/han2026/team_21086/: __init__.py  mynegotiator.py  requirements.txt  semruk.py
src/han_agents/han2026/team_21099/: __init__.py  equinox.py  equinox_llm_messages.py  equinox_messages.py  equinox_opponent_model.py  equinox_policy.py
src/han_agents/han2026/team_21113/: __init__.py  behaviour.py  diag.py  nexus.py  opponent_model.py  pareto.py  requirements.txt  sentiment.py
src/han_agents/han2026/team_21125/: __init__.py  hannari_hamaguri_han.py  requirements.txt
src/han_agents/han2026/team_21146/: __init__.py  t2agent.py
src/han_agents/han2026/team_21181/: __init__.py  agora.py
src/han_agents/han2026/team_21399/: __init__.py  group8.py  requirements.txt
src/han_agents/han2026/team_21400/: __init__.py  requirements.txt  sun.py
src/han_agents/han2026/team_21405/: __init__.py  lastoffer.py  main.py  pyproject.toml
src/han_agents/han2026/team_21480/: __init__.py  gunner_agent.py
src/han_agents/han2026/team_21627/: __init__.py  neonegotiator.py
src/han_agents/han2026/team_21656/: __init__.py  nekotiator.py  (+1 more)
tests/: conftest.py  test_agents2026.py  test_han_2026.py  test_smoke.py
(+34 files in other folders)
